--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,13 +14,14 @@
             android:label="@string/title_activity_dashboard"
             android:theme="@style/NoActionBar"></activity>
         <activity android:name=".common.LoginActivity" />
-        <activity android:name=".common.SignUpActivity" />
-        <activity android:name=".SplashActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+        <activity android:name=".common.OnBoarding" />
+        <activity android:name=".common.SignUpActivity" ><intent-filter>
+            <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
+            <category android:name="android.intent.category.LAUNCHER" />
+        </intent-filter></activity>
+        <activity android:name=".SplashActivity">
+
         </activity>
     </application>
 
