--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,14 +12,13 @@
         <activity
             android:name=".DashboardActivity"
             android:label="@string/title_activity_dashboard"
-            android:theme="@style/NoActionBar"></activity>
-        <activity android:name=".common.LoginActivity" />
-        <activity android:name=".common.OnBoarding" />
-        <activity android:name=".common.SignUpActivity" ><intent-filter>
+            android:theme="@style/Theme.MaterialComponents.Light.NoActionBar"><intent-filter>
             <action android:name="android.intent.action.MAIN" />
-
             <category android:name="android.intent.category.LAUNCHER" />
         </intent-filter></activity>
+        <activity android:name=".common.LoginActivity" />
+        <activity android:name=".common.OnBoarding" />
+        <activity android:name=".common.SignUpActivity" ></activity>
         <activity android:name=".SplashActivity">
 
         </activity>
