--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,7 @@
             android:theme="@style/Theme.MaterialComponents.Light.NoActionBar"/>
         <activity android:name=".common.LoginActivity" />
         <activity android:name=".common.OnBoarding" />
-        <activity android:name=".common.SignUpActivity" ></activity>
+        <activity android:name=".common.SignUpActivity" />
         <activity android:name=".SplashActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
