--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,8 +11,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.NoActionBar">
-        <activity android:name=".common.EditReportActivity"></activity>
-        <activity android:name=".common.HBVisualisationActivity"></activity>
+        <activity android:name=".common.ForgotPasswordActivity"></activity>
+        <activity android:name=".common.EditReportActivity" />
+        <activity android:name=".common.HBVisualisationActivity" />
         <activity android:name=".common.ViewReportActivity" />
         <activity
             android:name=".DashboardActivity"
@@ -29,10 +30,10 @@
             </intent-filter>
         </activity>
     </application>
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.INTERNET" />
-
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
 </manifest>
