--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.NoActionBar">
-        <activity android:name=".common.ForgotPasswordActivity"></activity>
+        <activity android:name=".common.ForgotPasswordActivity"/>
         <activity android:name=".common.EditReportActivity" />
         <activity android:name=".common.HBVisualisationActivity" />
         <activity android:name=".common.ViewReportActivity" />
